# woahland

./: .gitignore  99-uinput-permissions.rules  CMakeLists.txt  README.md  config.c  example-keybindings.md  head_mouse.c  head_mouse_wayland.c  mouse_config.h  quick-start.sh  setup-permissions.sh  socket_server.c  socket_server.h  test-permissions.sh  test_settings.sh  viture-mouse-ctl.c
